# Receptera

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.he.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  license-gate-test.yml
.planning/: F3-summary-SUMMARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  VERIFICATION.md
.planning/phases/02-hebrew-streaming-stt/: 02-01-PLAN.md  02-01-SPIKE-RESULTS.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-hebrew-suggestion-llm/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-hebrew-rag-knowledge-base/: 04-01-PLAN.md  04-01-SPIKE-RESULTS.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-v1.1-RESEARCH.md
.planning/phases/05-hot-path-integration/: 05-SUMMARY.md
.planning/phases/07-polish-demo/: 07-SUMMARY.md
.planning/research/: ARCHITECTURE.md  EXTERNAL-PLAN-REFERENCE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/receptra/: __init__.py  __main__.py  config.py  lifespan.py  main.py
backend/src/receptra/audit/: __init__.py  router.py  stats.py
backend/src/receptra/eval/: __init__.py  intent_eval.py  summary_eval.py
backend/src/receptra/eval/datasets/: __init__.py  intent_he.json  summary_he.json
backend/src/receptra/llm/: __init__.py  audit.py  client.py  engine.py  metrics.py  prompts.py  schema.py
backend/src/receptra/pipeline/: audit.py  events.py  hot_path.py  intent.py
backend/src/receptra/rag/: __init__.py  chunker.py  embeddings.py  errors.py  ingest.py  retriever.py  routes.py  schema.py  types.py  vector_store.py
backend/src/receptra/stt/: __init__.py  audit.py  engine.py  events.py  metrics.py  pipeline.py  vad.py  wer.py
backend/src/receptra/summary/: prompts.py  router.py  schema.py
backend/src/receptra/supervisor/: __init__.py  bus.py  router.py
backend/src/receptra/webhooks/: __init__.py  router.py  schema.py  sender.py
backend/tests/: conftest.py  test_healthz.py  test_integration.py
backend/tests/audit/: test_stats.py
backend/tests/eval/: test_intent_eval.py
backend/tests/llm/: conftest.py  test_audit.py  test_chat_template_grep.py  test_client.py  test_engine.py  test_engine_live.py  test_harness_isolation.py  test_metrics.py  test_ollama_smoke.py  test_prompts.py  test_schema.py
backend/tests/pipeline/: conftest.py  test_audit.py  test_confidence_gate.py  test_events.py  test_hot_path.py  test_intent.py  test_ws_suggest.py
backend/tests/rag/: __init__.py  conftest.py  test_04_ingest.py  test_04_retriever.py  test_04_schema.py  test_chaos.py  test_chunker.py  test_embeddings.py  test_embeddings_live.py  test_errors.py  test_ingest_pdf_docx.py  test_ollama_embed_smoke.py  test_recall_live.py  test_routes.py  test_schema.py  test_settings.py  test_types.py  test_vector_store.py
backend/tests/stt/: conftest.py  test_audit_stub.py  test_chaos_disconnect.py  test_engine.py  test_events_schema.py  test_lifespan.py  test_metrics.py  test_vad_streaming.py  test_wer_baseline.py  test_wer_hebrew.py  test_ws_handshake.py  test_ws_pcm_roundtrip.py
backend/tests/stt/fixtures/: he_cv_30.jsonl
backend/tests/summary/: test_summary_router.py
backend/tests/supervisor/: test_bus.py  test_router.py
backend/tests/webhooks/: test_router.py  test_sender.py
docs/: architecture.md  ci.md  docker.md  llm.md  models.md  rag.md  stt-eval.md  stt.md
fixtures/llm/: eval_set.jsonl  policy_returns.json
fixtures/rag/: eval_questions.jsonl
fixtures/rag/seed_kb/: 01_hours.md  02_returns.md  03_pricing.md  04_address.md  05_callback.md  06_payment.md  07_holidays.md  08_complaints.md  09_contact.md  10_privacy.md
frontend/: .dockerignore  .prettierrc.json  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: audit.ts  kb.ts  summary.ts  webhooks.ts
frontend/src/components/: HistoryPanel.tsx  KbAdminPanel.tsx  KbPanel.tsx  KbSearchBox.tsx  StatsPanel.tsx  StatusBar.tsx  SuggestionPanel.tsx  SummaryPanel.tsx  SupervisorView.tsx  TranscriptPanel.tsx  WebhookPanel.tsx
frontend/src/hooks/: useAudioCapture.ts  useCallHistory.ts  useWebSocket.ts
frontend/src/types/: kb.ts  ws.ts
knowledge/sample/: README.md
scripts/: bootstrap.sh  check_licenses.sh  download_models.sh  eval_llm.py  eval_rag.py  eval_wer.py  fetch_stt_fixtures.py  spike_chunk_token_ratio.py  spike_stt_latency.py
scripts/ollama/: DictaLM3.Modelfile
