[project]
name = "receptra"
version = "0.1.0"
description = "Receptra backend — Hebrew-first local voice co-pilot FastAPI service."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Receptra Contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    # Phase 2 (Hebrew Streaming STT) additions:
    "faster-whisper>=1.2.1,<2",
    "silero-vad>=6.2.1,<7",
    "numpy>=2.0,<3",
    "loguru>=0.7.3,<1",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pip-licenses>=5.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    # Phase 2 dev/test additions:
    "jiwer>=4.0,<5",
    "soundfile>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receptra"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-ra --strict-markers"
